<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCorner"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoIV"
                        android:scaleType="centerCrop"
                        android:src="@drawable/colon3" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primario_oscuro"/>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que_es"
                    android:textStyle="bold"
                    android:textSize="@dimen/tamanioTitulo"
                    android:textColor="@color/texto"
                    android:layout_marginRight="@dimen/maginSubtitulo"
                    android:layout_marginLeft="@dimen/maginSubtitulo"
                    android:layout_marginTop="@dimen/maginSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primario_oscuro"
                        android:layout_marginTop="10dp"/>

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/texto_secundario"
                        android:layout_marginRight="@dimen/maginSubtitulo"
                        android:layout_marginLeft="@dimen/maginSubtitulo"
                        android:layout_marginTop="@dimen/maginSubtitulo"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCorner"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoIV"
                        android:scaleType="centerCrop"
                        android:src="@drawable/colon1" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primario_oscuro"/>

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/termas"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/texto"
                        android:layout_marginRight="@dimen/maginSubtitulo"
                        android:layout_marginLeft="@dimen/maginSubtitulo"
                        android:layout_marginTop="@dimen/maginSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primario_oscuro"
                        android:layout_marginTop="10dp"/>

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/termas_texto"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/texto_secundario"
                        android:layout_marginRight="@dimen/maginSubtitulo"
                        android:layout_marginLeft="@dimen/maginSubtitulo"
                        android:layout_marginTop="@dimen/maginSubtitulo"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCorner"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoIV"
                        android:scaleType="centerCrop"
                        android:src="@drawable/colon2" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primario_oscuro"/>

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/playas"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/texto"
                        android:layout_marginRight="@dimen/maginSubtitulo"
                        android:layout_marginLeft="@dimen/maginSubtitulo"
                        android:layout_marginTop="@dimen/maginSubtitulo"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primario_oscuro"
                        android:layout_marginTop="10dp"/>

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/playas_texto"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/texto_secundario"
                        android:layout_marginRight="@dimen/maginSubtitulo"
                        android:layout_marginLeft="@dimen/maginSubtitulo"
                        android:layout_marginTop="@dimen/maginSubtitulo"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</FrameLayout>